# project-contract-app

./: MANIFEST.in  README.md  document_management_spec.md  project_contract_app_spec.md  pyproject.toml  requirements.txt  setup.py  subcontract_app_spec.md
document_management/: hooks.py  modules.txt
document_management/document_management/doctype/project_document/: project_document.json  project_document.py
document_management/document_management/doctype/project_document_link/: project_document_link.json  project_document_link.py
project_contract/: custom_fields.py  hooks.py  install.py  modules.txt  print_formats.py
project_contract/config/: __init__.py
project_contract/erpnext_integrations/: __init__.py  purchase_invoice.py  sales_invoice.py
project_contract/project_contract/: __init__.py  utils.py
project_contract/project_contract/doctype/: __init__.py
project_contract/project_contract/doctype/contract_variation/: contract_variation.json  contract_variation.py
project_contract/project_contract/doctype/project_contract/: project_contract.json  project_contract.py
project_contract/project_contract/doctype/project_contract_milestone/: __init__.py  project_contract_milestone.json  project_contract_milestone.py
project_contract/project_contract/report/: __init__.py
project_contract/subcontract_management/: utils.py
project_contract/tasks/: __init__.py  daily.py
project_contract/templates/: __init__.py
project_contract/templates/includes/: __init__.py
project_contract/templates/pages/: __init__.py
project_contract/www/: __init__.py
(+25 files in other folders)
